Redone attribute overriding